# openclaw-nie-guard

./: .env.sample  .eslintrc.cjs  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: disclosure-lint.yml  node-ci.yml  rust-ci.yml
apps/attack-sim/: package.json  tsconfig.json
apps/broker/: package.json  tsconfig.json
apps/demo-client/: package.json
docs/: api-spec.md  architecture.md  arxiv-endorsement-request.md  build-plan-v2.md  build-plan.md  compliance-map.md  deepmind-outreach.md  demo-runbook.md  disclosure-policy.md  executive-brief.md  exploit-mapping-and-disclosure-policy.md  franklin-taxonomy-mapping.md  github-repo-creation-checklist.md  linkedin-narrative-sequence.md  nie-integration.md  test-plan.md  threat-model.md
docs/figures/: figures.md
docs/zenodo-paper/: appendix-a-notation.md  bibliography.md  draft.md  section-10-audit.md  section-11-evaluation.md  section-12-discussion.md  section-13-related-work.md  section-14-conclusion.md  section-2-threat-model.md  section-3-architecture.md  section-4-admission.md  section-5-continuity.md  section-6-fhe-context-gate.md  section-7-mcp-mediation.md  section-8-policy-bundles.md  section-9-bem.md  v1.0-abstract-and-introduction.md  v1.0-final.md
infra/docker/: broker.Dockerfile  openclaw-mock.Dockerfile
rust/nie-core/: Cargo.toml  README.md
rust/nie-core/src/: lib.rs
scripts/: disclosure-lint.mjs  quickstart.sh  verify-public-boundary.mjs
(+21 files in other folders)
